# bustop

./: Cargo.toml  README.md
.claude/: settings.local.json
src/: display.rs  main.rs  metrics.rs  types.rs
src/sources/: disk.rs  ioreport.rs  memory.rs  mod.rs  smc.rs  sysctl.rs
