[package]
name = "bustop"
version = "0.1.0"
edition = "2021"
description = "Bus and interconnect utilization monitor for macOS"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
libc = "0.2"
core-foundation = "0.10"
core-foundation-sys = "0.8"
mach2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3.4"

[profile.release]
lto = true
strip = true
